# serializer version: 1
# name: test_parse_event_snapshot[scalar_int]
  ConnectionStatusEvent(
    data=ConnectedData(
      active_station=None,
      rain_delay=None,
      remain_sec=None,
      state=0,
    ),
    device_uuid='7b1ad1ef-91df-4e50-9004-269c139c681c',
    satellite_id=527302,
    updated_at=datetime.datetime(2026, 6, 13, 23, 18, tzinfo=datetime.timezone.utc),
  )
# ---
# name: test_parse_event_snapshot[scalar_str]
  ConnectionStatusEvent(
    data=ConnectedData(
      active_station=None,
      rain_delay=None,
      remain_sec=None,
      state='offline',
    ),
    device_uuid='7b1ad1ef-91df-4e50-9004-269c139c681c',
    satellite_id=527302,
    updated_at=datetime.datetime(2026, 6, 13, 23, 18, tzinfo=datetime.timezone.utc),
  )
# ---
# name: test_parse_event_snapshot[station_epoch_timestamp]
  StationStateEvent(
    data=StationStateData(
      program_number=34,
      remain_sec=88,
      state=1,
    ),
    device_uuid='8c756129-0000-8da0-9049-8e44b2deb091',
    satellite_id=527302,
    updated_at=datetime.datetime(2026, 6, 14, 20, 22, 12, tzinfo=datetime.timezone.utc),
    zone=1,
  )
# ---
# name: test_parse_event_snapshot[station_normal_duration]
  StationStateEvent(
    data=StationStateData(
      program_number=36,
      remain_sec=88,
      state=1,
    ),
    device_uuid='8c756129-0000-8da0-9049-8e44b2deb091',
    satellite_id=527302,
    updated_at=datetime.datetime(2026, 6, 14, 20, 22, 12, tzinfo=datetime.timezone.utc),
    zone=2,
  )
# ---
# name: test_parse_event_snapshot[station_past_epoch_timestamp]
  StationStateEvent(
    data=StationStateData(
      program_number=34,
      remain_sec=1476535243,
      state=1,
    ),
    device_uuid='8c756129-0000-8da0-9049-8e44b2deb091',
    satellite_id=527302,
    updated_at=datetime.datetime(2026, 6, 14, 20, 22, 12, tzinfo=datetime.timezone.utc),
    zone=1,
  )
# ---
